--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -57,10 +57,10 @@
 
 .chart-container {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
-  width: 120px;
-  height: 60px;
+  bottom: 1rem;
+  right: -5px;
+  width: 80px;
+  height: 40px;
   opacity: 0.7;
   transition: opacity 0.2s ease;
 }
@@ -230,9 +230,8 @@
   .metric-value {
     font-size: 2rem;
   }
-  
-  .chart-container {
-    width: 100px;
-    height: 50px;
+    .chart-container {
+    width: 70px;
+    height: 35px;
   }
 }
